# amqp-dump

./: Cargo.toml  LICENSE
src/: amqp_stream.rs  main.rs  util.rs
