[package]
name = "amqp-dump"
version = "0.1.0"
authors = ["Roman Gafiyatullin <r.gafiyatullin@me.com>"]
edition = "2018"

description = "An util to dump deliveries from AMQP by specified exchange and routing-key"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "^0.15"
log = "^0.4"
pretty_env_logger = "^0.4"

tokio = {version = "^0.3", features = ["full"]}
futures = "^0.3"
async-trait = "^0.1"
lapin = "^1.4"

rand = "^0.7"
hex = "^0.4"

serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
serde_yaml = "^0.8"

parse_duration = "^2.1"

anyhow = "^1"
thiserror = "^1"