[package]
name = "amqp-dump"
version = "0.1.1"
authors = ["Roman Gafiyatullin <r.gafiyatullin@me.com>"]
edition = "2018"

description = "An util to dump deliveries from AMQP by specified exchange and routing-key"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "^0.15"
log = "^0.4"
pretty_env_logger = "^0.4"

tokio = {version = "^0.3", features = ["full"]}
futures = "^0.3"
lapin = "^1.4"

rand = "^0.7"
hex = "^0.4"

parse_duration = "^2.1"

anyhow = "^1"